# ML_From_Scratch

./: .gitignore  CMakeLists.txt  README.md
DATA_HANDLER/include/: common.hpp  data.hpp  data_handler.hpp
DATA_HANDLER/source/: common.cpp  data.cpp  data_handler.cpp
KMEANS/include/: cluster.hpp  kmeans.hpp
KMEANS/source/: cluster.cpp  kmeans.cpp
KNN/include/: knn.hpp
KNN/source/: knn.cpp
MAIN/include/: main.hpp
MAIN/source/: main.cpp
NEURAL_NETWORK/include/: layer.hpp  network.hpp  neuron.hpp
NEURAL_NETWORK/source/: layer.cpp  network.cpp  neuron.cpp
include/: data.hpp  data_handler.hpp
mnist_ml/: Makefile
source/: data.cpp  data_handler.cpp
